objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AVA__AVAAI_action_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Campaign Member requires some action be taken by a rep</description>
        <inlineHelpText>This Campaign Member requires some action be taken by a rep</inlineHelpText>
        <label>Conversica Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required_date__c</fullName>
        <description>This Campaign Member requires some action be taken by a rep</description>
        <inlineHelpText>This Campaign Member requires some action be taken by a rep</inlineHelpText>
        <label>Conversica Action Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_1__c</fullName>
        <description>This Campaign Member&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>This Campaign Member&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_2__c</fullName>
        <description>This Campaign Member&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>This Campaign Member&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage__c</fullName>
        <description>The current stage of the Conversica Conversation</description>
        <inlineHelpText>The current stage of the Conversica Conversation</inlineHelpText>
        <label>Conversation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
        <description>The date and time the current Conversation Stage changed</description>
        <inlineHelpText>The date and time the current Conversation Stage changed</inlineHelpText>
        <label>Conversation Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status__c</fullName>
        <description>The current status of the Conversica Conversation</description>
        <inlineHelpText>The current status of the Conversica Conversation</inlineHelpText>
        <label>Conversation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_date__c</fullName>
        <description>The date and time the current Conversation Status was set</description>
        <inlineHelpText>The date and time the current Conversation Status was set</inlineHelpText>
        <label>Conversation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail__c</fullName>
        <label>Deprecated Conversation Status Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail_date__c</fullName>
        <label>Deprecated Status Detail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status__c</fullName>
        <description>The current status of the Campaign Member in Conversica</description>
        <inlineHelpText>The current status of the Campaign Member in Conversica</inlineHelpText>
        <label>Conversica Lead Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
        <description>The date and time the current Conversation status was set</description>
        <inlineHelpText>The date and time the current Conversation status was set</inlineHelpText>
        <label>Conversica Lead Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_date_added__c</fullName>
        <description>The date and time Conversica received this Campaign Member</description>
        <inlineHelpText>The date and time Conversica received this Campaign Member</inlineHelpText>
        <label>Conversica Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_1__c</fullName>
        <description>If a new email address is discovered in a Campaign Member&apos;s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a new email address is discovered in a Campaign Member&apos;s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_2__c</fullName>
        <description>If a second new email address is discovered in a Campaign Member’s response, this field will be populated with the additional email address</description>
        <inlineHelpText>If a second new email address is discovered in a Campaign Member’s response, this field will be populated with the additional email address</inlineHelpText>
        <label>Conversica Discovered Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_name__c</fullName>
        <description>If a new first name is discovered in a Campaign Member’s response, this field will be populated with the preferred first name.</description>
        <inlineHelpText>If a new first name is discovered in a Campaign Member’s response, this field will be populated with the preferred first name.</inlineHelpText>
        <label>Conversica Discovered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_first_message_date__c</fullName>
        <description>The date and time Conversica first sent a message to the Campaign Member</description>
        <inlineHelpText>The date and time Conversica first sent a message to the Campaign Member</inlineHelpText>
        <label>Conversica First Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Campaign Member is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
        <inlineHelpText>Checked if the Campaign Member is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
        <label>Conversica Further Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action_date__c</fullName>
        <description>Date and time the Campaign Member became a Conversica Further Action lead.</description>
        <inlineHelpText>Date and time the Campaign Member became a Conversica Further Action lead.</inlineHelpText>
        <label>Conversica Further Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Campaign Member is ready to be contacted by a rep</description>
        <inlineHelpText>The Campaign Member is ready to be contacted by a rep</inlineHelpText>
        <label>Conversica Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
        <description>The date and time the Campaign Member became &quot;Hot&quot; in Conversica</description>
        <inlineHelpText>The date and time the Campaign Member became &quot;Hot&quot; in Conversica</inlineHelpText>
        <label>Conversica Hot Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_message_date__c</fullName>
        <description>The date and time Conversica last sent a message to the Campaign Member</description>
        <inlineHelpText>The date and time Conversica last sent a message to the Campaign Member</inlineHelpText>
        <label>Conversica Last Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_response_date__c</fullName>
        <description>The date and time Conversica last received a response from the Campaign Member</description>
        <inlineHelpText>The date and time Conversica last received a response from the Campaign Member</inlineHelpText>
        <label>Conversica Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Campaign Member may lose interest if not contacted soon by a rep</description>
        <inlineHelpText>The Campaign Member may lose interest if not contacted soon by a rep</inlineHelpText>
        <label>Conversica Lead At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk_date__c</fullName>
        <description>The date and time the Campaign Member became &quot;At Risk&quot; in Conversica</description>
        <inlineHelpText>The date and time the Campaign Member became &quot;At Risk&quot; in Conversica</inlineHelpText>
        <label>Conversica Lead At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_profile__c</fullName>
        <description>A link to the Conversica Lead Profile page for the selected Campaign Member.</description>
        <inlineHelpText>A link to the Conversica Lead Profile page for the selected Campaign Member.</inlineHelpText>
        <label>Conversica Lead Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_options__c</fullName>
        <description>Options field for this object in Conversica</description>
        <inlineHelpText>Options field for this object in Conversica</inlineHelpText>
        <label>Conversica Options</label>
        <picklist>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip to follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_score__c</fullName>
        <description>The Conversica Score of an Conversica lead.</description>
        <label>Deprecated Conversica Score</label>
        <picklist>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Campaign Member indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
        <inlineHelpText>Checked if the Campaign Member indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
        <label>Conversica SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_status__c</fullName>
        <description>Status of an Conversica lead in the Conversica system</description>
        <label>Deprecated Conversica Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undeliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVA Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversica Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Appt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Appt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>